Add button to specify grid, move code to functions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
+    <button id="set-grid">Set grid</button>
     <div id="container">
-        
     </div>
     <script src="js/script.js"></script>
 </body>
